Changing icons, header issues on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -155,9 +155,9 @@ ion-content {
 
 .search-query {
   display: block;
-  margin: 6px 10px;
+  margin: 14px 16px;
   font-weight: 600;
   text-transform: uppercase;
   color: #888;
-  font-size: 10px;
+  font-size: 11px;
 }
