--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -49,9 +49,9 @@ $tabs-tab-color-active: #101010;
 $tabs-ios-border: none;
 $tabs-wp-border: none;
 
-$toolbar-ios-height: 60px;
-$toolbar-md-height: 60px;
-$toolbar-wp-height: 60px;
+$toolbar-ios-height: 70px;
+$toolbar-md-height: 70px;
+$toolbar-wp-height: 70px;
 
 // App iOS Variables
 // --------------------------------------------------
